Align items correctly in the mobile version

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,12 +1,11 @@
 html {
-    height: 100%;
     color: #256993;
     font-family: "Montserrat", sans-serif;
 }
 
 body{
     display: flex;
-    height:100%;
+    height:98vh;
     margin: 0;
     background-color: #F3E9DE;
 }
@@ -22,6 +21,7 @@ h1 {
 }
 
 aside{
+    height:100vh;
     flex-grow:1;
     background-color: #FAF4EC;
 }
@@ -68,8 +68,13 @@ button {
     background-color: #56536A;
 }
 
+.textbox {
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 #note {
-    width: 96%;
+    grid-column:1/-1;    
     height: 10rem;
     border-color: #4E8CE5;
     border-width: .2em;
@@ -115,6 +120,27 @@ img {
 
 @media screen and (max-width:600px) {
     body{
-        flex-direction: column;
+        display: grid;
+        grid-template-rows: 1fr 4fr;
     }
+
+    aside{
+        height: 100%
+    }
+
+    .top_buttons {
+        display: flex;
+        justify-content: space-between;
+        padding: 0em 1em
+    }
+
+    h3 {
+        margin: 0em;
+        align-self: center;
+    }
+
+    h2{
+        margin:.5em
+    }
+
 }
